# Agent

./: .env  README.md  agent.sql  main.py  nacos_util.py  prompts.py
agent-python/: agent.py  config.py  pyproject.toml  system_prompt.md
agent-python/knowledge_base/documents/: 员工手册.md
agent-python/temp_nacos/: alibabacloud_credentials_api-1.0.1-py3-none-any.whl  alibabacloud_gateway_pop-0.1.3-py3-none-any.whl  alibabacloud_kms20160120-3.0.0-py3-none-any.whl  alibabacloud_tea_openapi-0.4.4-py3-none-any.whl  darabonba_core-1.0.7-py3-none-any.whl  nacos_sdk_python-3.2.0-py3-none-any.whl
agent-python/tools/: attendance.py  employee_info.py  knowledge_base.py  payroll.py
backend-java/src/main/resources/: application.yml
backend-java/src/test/java/com/agent/: JavaAgentApplicationTests.java
knowledge_base/: kb_service.py
knowledge_base/chroma_db/: chroma.sqlite3
knowledge_base/documents/: 个税计算规则.md  考勤管理制度.md
src/main/java/com/agent/: JavaAgentApplication.java
temp_nacos/: a2a_sdk-0.3.26-py3-none-any.whl  alibabacloud_credentials-1.0.9-py3-none-any.whl  alibabacloud_gateway_spi-0.0.4-py3-none-any.whl
tools/: employee.py  recruitment.py  resume.py
vue-frontend/: README.md  package-lock.json  package.json  pom.xml  vite.config.ts
vue-frontend/src/: App.vue  main.ts
vue-frontend/src/api/: agent.ts
vue-frontend/src/components/: ChatHeader.vue  ChatInput.vue  ChatMessages.vue  LoadingIndicator.vue  MessageItem.vue  QuickQuestions.vue
vue-frontend/src/main/resources/: application.yml
vue-frontend/src/types/: index.ts
(+55 files in other folders)
