[project]
name = "fastapiagent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.139.0",
    "gradio>=6.19.0",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-community>=0.2.0",
    "langgraph>=1.2.7",
    "nacos-sdk-python>=2.3.2",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "chromadb>=0.4.24",
    "sentence-transformers>=2.7.0",
    "langchain-huggingface>=0.1.0",
    "requests>=2.34.2",
]
